Sat Jul 22 11:16:05 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (changed_handler): Fix bug where
	redraw wasn't being done properly when height of
	dirty region changed.

	* demos/Makefile.am: Remove various references to
	-lgmodule

Fri Jul 21 15:28:13 2000  Owen Taylor  <otaylor@redhat.com>

        * gtk/gtktextlayout.[ch], gtk/gtktextdisplay.c: Use new
	PangoAttrShape to reserve space for pixmaps, add 
	GSList *pixmaps to GtkTextLineDisplay, draw the pixmaps
	in the display functions.
	
	* gtk/testgtk.c (create_layout): Set some more exotic
	scrolled window options

	* gtk/gtkscrolledwindow.[ch] (gtk_scrolled_window_set_shadow_type):
	Add function to set the shadow type of a window, to allow
	putting a shadow around widgets such as GtkLayout or GnomeCanvas
	which don't draw their own frame.

Fri Jul 21 16:34:42 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/package-db-tutorial.sh: New file for
	  packaging DocBook format tutorial

Fri Jul 21 14:23:51 BST 2000  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml: Minor updates

	* docs/tutorial/*.jpg *.eps: Screenshots for tutorial

2000-07-19  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtksignal.c: Fix C++ comment.

	* gtk/gtkimmulticontext.c
	* gtk/gtktextbtree.c: Remove gccisms: Don't use __FUNCTION__,
	don't return value from void functions.

	* gtk/gtk.def: Add gtk_rc_style_unref.

2000-07-19  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdk-pixbuf/gdk-pixbuf.h, gtk/gtkhsv.h, gtk/gtktextbtree.h,
	gtk/gtktextbuffer.h, gtk/gtktextchild.h, gtk/gtktextdisplay.h,
	gtk/gtktextiter.h, gtk/gtktextiterprivate.h, gtk/gtktextlayout.h,
	gtk/gtktextmarkprivate.h, gtk/gtktextsegment.h, gtk/gtktexttag.h,
	gtk/gtktexttagtable.h, gtk/gtktexttypes.h, gtk/gtktextview.h,
	gtk/gtktypeutils.h: Include files outside of the extern "C"
	block. Makes some C++ compiler happy. Reported by Denis Vakatov
	<vakatov@peony.nlm.nih.gov>.

Wed Jul 19 14:07:57 BST 2000  Tony Gale <gale@gtk.org>
